<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_personal_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enter_personal_detail"
        android:textColor="@color/main"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:fontFamily="@font/raleway"
        android:hint="@string/name"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_detail_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_body_mass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/mass_index_title"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/weight"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@id/tv_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_body_mass_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/height"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@id/tv_gender"
        app:layout_constraintStart_toEndOf="@id/tv_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_body_mass_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/gender"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_height"
        app:layout_constraintTop_toBottomOf="@id/tv_body_mass_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_pickers"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_height">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1" />

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_weight="1" />

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_pickers"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_marginVertical="12dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway"
                android:layout_gravity="center_horizontal"
                />
        </FrameLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>